cmake_minimum_required(VERSION 3.10)
project( test_graph )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set (CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}   -w")
add_executable(test_graph test_graph.cpp ../faceDetect.cpp )
target_link_libraries( test_graph ${OpenCV_LIBS})
